Fixed bug #40709 (array_reduce() behaves strange with one item stored arrays).